Add dependency install and Node setup to workflow and update firebase configs

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "website-react-perfume"
-  }
+    "default": "angelperfumery-5a544"
+  },
+  "targets": {},
+  "etags": {}
 }
