--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,22 @@
 {
   "hosting": {
     "public": "dist",
-    "headers": [{
-      "source": "**",
-      "headers": [{
-        "key": "Cache-Control",
-        "value": "no-cache, no-store, must-revalidate"
-      }]
-    }],
-    "rewrites": [{"source":"**","destination":"/index.html"}]
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
